Migrate to ecash-wallet

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bip39": "^3.1.0",
     "chronik-client": "^3.3.0",
     "ecash-lib": "^3.2.0",
+    "ecash-wallet": "1.1.0",
     "ecashaddrjs": "^2.0.0"
   },
   "devDependencies": {
